# ros2-adaptive-ekf-fusion

./: .gitignore  README.md  frames_2025-12-13_20.18.40.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build  latest_list
src/adaptive_ekf/: CMakeLists.txt  package.xml
src/adaptive_ekf/include/adaptive_ekf/: ekf_node.hpp
src/adaptive_ekf/src/: ekf_node.cpp
src/antarctic_robot_description/: CMakeLists.txt  package.xml
src/antarctic_robot_description/launch/: antarctic_world.launch.py
src/antarctic_robot_description/models/ice_patch/: ice_patch.sdf  model.config
src/antarctic_robot_description/urdf/: my_bot.urdf
src/antarctic_robot_description/worlds/: antarctic.sdf
